--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,13 +1,14 @@
 .Carousel {
   margin-top: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0px 30px;
 }
 
 .Carousel .card-box {
   width: 76px;
   height: 51px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .Carousel img {
@@ -25,17 +26,14 @@
   text-align: center;
   color: #000000;
   margin-top: 65px;
+  padding: 0px 300px;
 }
 
-/* .css-1algrk9-MuiRating-root {
-  display: flex;
-  -webkit-tap-highlight-color: transparent;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-content: space-around;
-  justify-content: center;
-  align-items: baseline;
-} */
+.css-1algrk9-MuiRating-root {
+  align-items: center !important;
+  display: flex !important;
+  justify-content: center !important;
+}
 
 .carousel-content h1 {
   font-weight: 400;
@@ -47,6 +45,7 @@
   justify-content: center;
   align-items: center;
   text-align: center !important;
+  margin-top: 32px;
 }
 
 .carousel-content h3 {
@@ -60,4 +59,5 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-top: 3px;
 }
